fixed whitespace removed media query on bg image

--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -32,8 +32,4 @@
         margin: 0 auto;
     }
 
-    .catBody{
-        background-size: 80%; 
-    }
-
 }
