--- a/styles/style.css
+++ b/styles/style.css
@@ -726,7 +726,4 @@ footer p {
     padding: 5px;
     margin: 0 auto;
   }
-  .catBody {
-    background-size: 80%;
-  }
 }
